--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-ui-preloader": "^1.1.0",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
